# hanmaru-rewrite

./: .gitignore  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt  secrets-template.yml
bot/: Dockerfile  config.yml  converter.py  database.py  requirements.txt
bot/core/: client.py
bot/crud/: command.py  user.py
bot/ext/: guide.py  reward.py  rps.py  test.py  userinfo.py
bot/models/: command.py  user.py
src/: converter.py  database.py  emojis.py  launcher.py  settings.py  utils.py  views.py
src/core/: client.py
src/crud/: user.py
src/ext/: guide.py  reward.py  rps.py  test.py  userinfo.py
src/models/: user.py
web/: Dockerfile  app.py  config.yml  requirements.txt
web/models/: command.py  user.py
web/nginx/: nginx.conf
web/templates/: command_info.html  command_list.html  index.html  layout.html
