[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hanmaru-rewrite"
version = "0.1.0"
description = "A rewrite of Hanmaru"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "motsuni04", email = "slothst04@gmail.com"}
]
dependencies = [
    "discord.py>=2.5.2"
]